# Research_Project_Rust_Semi-Supervised_Learning

./: .gitignore  AGENTS.md  PROJECT_COMPLETE.md  README.md  STAPPENPLAN_UPDATE_TO_PLANTVILLAGE.md  burn_mem.txt  download_plantvillage.sh  pipeline_config.yaml  run_research_pipeline.sh  story.md  todo.txt
Submissie/: WS_Appendices.md  WS_InstallationGuide.md  WS_References_IEEE.md  WS_UserManual.md
archive/server/: Cargo.toml  deploy-server.sh  plantvillage-server.service
archive/server/src/routes/: mod.rs
benchmarks/: PIPELINE_README.md  README.md  compare_frameworks.py  run_benchmarks.sh  run_research_experiments.sh  run_stress_test.sh  ssl_benchmark.json
blog/: blog.html
docs/: INSTALLATION.md  USER_MANUAL.md  WS_Appendices.md  WS_InstallationGuide.md  WS_References_IEEE.md  WS_UserManual.md  installation.md
gui/: ANDROID_BUILD.md  INTEGRATION_COMPLETE.md
gui/src/: app.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/assets/models/: base_model.mpk
gui/src-tauri/src/: bundled_resources.rs  device.rs  lib.rs  main.rs  state.rs
gui/src-tauri/src/commands/: benchmark.rs  dataset.rs  demo.rs  mod.rs  ssl_mobile.rs
incremental_learning/: .gitignore  Cargo.toml  EXECUTION_COMPLETE.md  EXPERIMENT_RESULTS.md  README.md  config_ewc.toml  config_finetuning.toml  config_rehearsal.toml  experiment_config.toml
incremental_learning/crates/plant-core/: Cargo.toml
incremental_learning/crates/plant-core/src/: backend.rs  cli.rs  config.rs  error.rs  lib.rs  metrics.rs  types.rs
incremental_learning/crates/plant-dataset/: Cargo.toml
incremental_learning/crates/plant-dataset/src/: augmentation.rs  dataset.rs  lib.rs  loader.rs  preprocess.rs  statistics.rs
incremental_learning/crates/plant-incremental/: Cargo.toml
incremental_learning/crates/plant-incremental/src/: finetuning.rs  lib.rs  lwf.rs  metrics.rs
incremental_learning/crates/plant-mobile/: Cargo.toml
incremental_learning/crates/plant-mobile/src/: lib.rs
incremental_learning/crates/plant-training/: Cargo.toml
incremental_learning/crates/plant-training/src/: checkpoint.rs  evaluator.rs  lib.rs  lr_schedule.rs  model.rs  trainer.rs
incremental_learning/docs/research/: 01_Literature_Review.md  02_Baseline_Expectations.md
incremental_learning/tools/evaluate/: Cargo.toml
incremental_learning/tools/evaluate/src/: main.rs
incremental_learning/tools/experiment-runner/: Cargo.toml
incremental_learning/tools/experiment-runner/src/: main.rs
incremental_learning/tools/preprocess/: Cargo.toml
incremental_learning/tools/preprocess/src/: main.rs
incremental_learning/tools/train/: Cargo.toml
incremental_learning/tools/train/src/: main.rs
mobile_export/: test_canvas_preprocessing.mjs  test_onnx_inference.py  test_preprocessing.html
neural_net/: Cargo.toml  README.md
neural_net/src/: cifar10.rs  gpu_layer.rs  gpu_layer_cnn.rs  gpu_tensor.rs  lib.rs  model.rs  pseudo_label.rs
neural_net/src/kernels/: activations.cu  data_prep.cu  elementwise.cu  matrix_ops.cu
plantvillage_ssl/: Cargo.toml  README.md  best_model.mpk
plantvillage_ssl/.cargo/: config.toml
plantvillage_ssl/archive/: README.md
plantvillage_ssl/archive/gui-jetson-client/: ConnectionStatus.svelte  connection.rs
plantvillage_ssl/archive/inference/: jetson.rs
plantvillage_ssl/archive/server/src/: state.rs
plantvillage_ssl/archive/server/src/routes/: files.rs  health.rs  training.rs
plantvillage_ssl/benchmarks/: baseline_benchmark.json  ssl_optimized_benchmark.json
plantvillage_ssl/docs/: installation.md  user_guide.md
plantvillage_ssl/gui/: COMPLETE.md  MOBILE_DEPLOY.md  MOBILE_SSL.md  MOBILE_SUMMARY.md  QUICK_REF.md  README.md  package-lock.json  package.json  tailwind.config.js
plantvillage_ssl/gui/src/: app.css  app.html
plantvillage_ssl/gui/src-tauri/: Cargo.toml  tauri.conf.json
plantvillage_ssl/gui/src-tauri/src/: backend.rs  device.rs  lib.rs  state.rs
plantvillage_ssl/gui/src-tauri/src/commands/: benchmark.rs  dataset.rs  dataset_bundle.rs  demo.rs  diagnostics.rs  experiments.rs  incremental.rs  inference.rs  mod.rs  pseudo.rs  remote.rs  shared.rs  simulation.rs  ssl_mobile.rs  training.rs
plantvillage_ssl/gui/src/lib/components/: BarChart.svelte  Card.svelte  ImageUpload.svelte  LineChart.svelte  ProgressRing.svelte  Sidebar.svelte  Terminal.svelte  TitleBar.svelte
plantvillage_ssl/gui/src/lib/pages/: Benchmark.svelte  Dashboard.svelte  Diagnostics.svelte  Experiment.svelte  IncrementalLearning.svelte  Inference.svelte  InteractiveSSL.svelte  PseudoLabel.svelte  Simulation.svelte  Training.svelte
plantvillage_ssl/gui/src/lib/stores/: app.ts  connection.ts
plantvillage_ssl/gui/src/routes/: +layout.svelte  +page.svelte
plantvillage_ssl/mobile_export/: .gitignore  README.md  load_weights.py  package-lock.json  package.json  test_canvas_preprocessing.mjs  test_onnx_inference.py
plantvillage_ssl/scripts/: download_dataset.py  download_dataset.sh  setup_balanced_dataset.py  setup_jetson.sh
plantvillage_ssl/server/src/: main.rs
plantvillage_ssl/server/src/routes/: experiments.rs
plantvillage_ssl/src/: backend.rs  lib.rs  main.rs  main.rs.broken  main.rs.broken2  training_simple.rs
plantvillage_ssl/src/dataset/: augmentation.rs  burn_dataset.rs  loader.rs  mod.rs  prepare.rs  split.rs
plantvillage_ssl/src/incremental/: ewc.rs  finetuning.rs  lwf.rs  metrics.rs  rehearsal.rs
plantvillage_ssl/src/inference/: benchmark.rs  jetson.rs  mod.rs  predictor.rs  runner.rs
plantvillage_ssl/src/model/: cnn.rs  config.rs  mod.rs
plantvillage_ssl/src/training/: actual.rs  mod.rs  pseudo_label.rs  scheduler.rs  simulation.rs  ssl_incremental.rs  supervised.rs  trainer.rs
plantvillage_ssl/src/utils/: charts.rs  error.rs  logging.rs  mod.rs
pytorch_reference/: model.py  requirements.txt  trainer.py
research/: BENCHMARK_ANSWERS.md  First_weekly_meeting.txt  RESEARCH_ANSWERS.md  ResearchProject_Contractplan_Warre_Snaet (1).md  literatuurstudie.md
scripts/: PIPELINE_README.md  cleanup_system.sh  create_mobile_subset.sh  macos_ios_build.sh  setup_farmer_demo.sh
src/: main.rs
(+50 files in other folders)
