[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"
authors = ["Warre Snaet warre.snaet@student.howest.be"]
description = "A GPU-only neural network library built from scratch using CUDA"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
tar = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
rand = "0.8"
cudarc = { version = "0.9", features = ["driver", "cublas", "nvrtc"], optional = true }

[dev-dependencies]
approx = "0.5"

[features]
default = []
cuda = ["cudarc"]
