[package]
name = "plantvillage_ssl"
version = "0.1.0"
edition = "2021"
authors = ["Warre Snaet"]
description = "Semi-Supervised Plant Disease Classification using Burn in Rust for Edge Devices"
license = "MIT"

[dependencies]
# ML Framework - Burn with multiple backends
burn = { version = "0.15", features = ["train", "tui"] }
burn-cuda = { version = "0.15", optional = true }       # CUDA backend for GPU training
burn-ndarray = { version = "0.15", optional = true }    # CPU backend fallback
burn-tch = { version = "0.15", optional = true }        # LibTorch backend (optional, for comparison)

# Data handling
image = "0.25"
ndarray = "0.16"
walkdir = "2.5"                                          # Directory traversal for dataset loading

# Serialization - bincode 2.0.0-rc.3 is required for Burn 0.15 compatibility
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=2.0.0-rc.3"                                  # Exact version required for Burn 0.15

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI & Progress
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Utilities
rand = "0.8"
rand_chacha = "0.3"                                      # Reproducible RNG
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"                                        # Error handling

# Async (for dataset downloading)
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }

# CSV export for metrics
csv = "1.3"

[features]
default = ["cpu"]
cpu = ["burn-ndarray"]                                   # CPU-only backend
cuda = ["burn-cuda"]                                     # CUDA GPU backend
tch = ["burn-tch"]                                       # LibTorch backend
jetson = ["cuda"]                                        # Jetson-specific optimizations
download = ["tokio", "reqwest"]                          # Dataset download feature

[[bin]]
name = "plantvillage_ssl"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.release-jetson]
inherits = "release"
opt-level = "s"                                          # Optimize for size on edge devices
