[package]
name = "plantvillage_ssl"
version = "0.1.0"
edition = "2021"
authors = ["Warre Snaet"]
description = "Semi-Supervised Plant Disease Classification using Burn in Rust"
license = "MIT"

[dependencies]
# ML Framework - Burn with multiple backends
# Note: 0.20-pre has latest cubecl with CUDA 13 support
burn = { version = "0.20.0-pre", features = ["train", "metrics"] }
burn-cuda = { version = "0.20.0-pre", optional = true }       # CUDA backend for GPU training
burn-ndarray = { version = "0.20.0-pre", optional = true }    # CPU backend fallback
burn-tch = { version = "0.20.0-pre", optional = true }        # LibTorch backend (optional, for comparison)

# Data handling
image = "0.25"
ndarray = "0.16"
walkdir = "2.5"                                          # Directory traversal for dataset loading

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0"                                          # Burn 0.18 uses bincode 2.0.1+

# Logging & Monitoring
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI & Progress
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
colored = "2.1"

# Utilities
rand = "0.8"
rand_chacha = "0.3"                                      # Reproducible RNG
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"                                        # Error handling
rayon = "1.10"                                           # Parallel data loading

# Async (for dataset downloading)
tokio = { version = "1.0", features = ["full"], optional = true }
reqwest = { version = "0.11", features = ["blocking"], optional = true }

# CSV export for metrics
csv = "1.3"

[features]
default = ["cuda"]
cpu = ["burn-ndarray"]                                   # CPU-only backend (fallback only)
cuda = ["burn-cuda"]                                     # CUDA GPU backend (default)
tch = ["burn-tch"]                                       # LibTorch backend
download = ["tokio", "reqwest"]                          # Dataset download feature

[[bin]]
name = "plantvillage_ssl"
path = "src/main.rs"

[[bin]]
name = "experiments"
path = "src/bin/experiments.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
