[package]
name = "plantvillage-server"
version = "0.1.0"
edition = "2021"
authors = ["Warre Snaet"]
description = "HTTP API server for PlantVillage SSL training on Jetson"
license = "MIT"

[[bin]]
name = "plantvillage-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }

# Async runtime
tokio = { version = "1", features = ["full", "process"] }
tokio-stream = { version = "0.1", features = ["sync", "io-util"] }
tokio-util = { version = "0.7", features = ["io"] }
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive", "env"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
