[package]
name = "plant-dataset"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core library
plant-core = { path = "../plant-core" }

# Burn framework
burn = { workspace = true }

# Image processing
image = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
csv = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
rayon = { workspace = true }
indicatif = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
