[package]
name = "plant-incremental"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Internal dependencies
plant-core = { path = "../plant-core" }
plant-training = { path = "../plant-training" }

# Burn framework
burn = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Utilities
ndarray = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
burn-ndarray = { workspace = true }
