[package]
name = "plant-mobile"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core dependencies
plant-core = { path = "../plant-core" }
plant-training = { path = "../plant-training" }

# Burn framework
burn = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Image processing
image = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
