[package]
name = "experiment-runner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "experiment-runner"
path = "src/main.rs"

[dependencies]
# Workspace crates
plant-core = { path = "../../crates/plant-core" }
plant-dataset = { path = "../../crates/plant-dataset" }
plant-training = { path = "../../crates/plant-training" }
plant-incremental = { path = "../../crates/plant-incremental" }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"

# Progress
indicatif = { workspace = true }

# CSV export
csv = { workspace = true }

# Async
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }
