[package]
name = "preprocess"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "preprocess"
path = "src/main.rs"

[dependencies]
# Local crates
plant-core = { path = "../../crates/plant-core" }
plant-dataset = { path = "../../crates/plant-dataset" }

# CLI
clap = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Progress
indicatif = { workspace = true }

# Parallelism
rayon = { workspace = true }

# Image processing
image = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Random
rand = { workspace = true }
