[package]
name = "train"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
# Workspace crates
plant-core = { path = "../../crates/plant-core" }
plant-dataset = { path = "../../crates/plant-dataset" }
plant-training = { path = "../../crates/plant-training" }

# Burn framework
burn = { workspace = true }

# CLI
clap = { workspace = true }

# Serialization
serde = { workspace = true }
toml = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Progress
indicatif = { workspace = true }

# Time handling
chrono = { workspace = true }
