[package]
name = "plantvillage-gui"
version = "0.1.0"
description = "PlantVillage SSL Dashboard - Semi-Supervised Learning Visualization"
authors = ["Warre Snaet"]
edition = "2021"

[lib]
name = "plantvillage_gui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

# Reference to the unified workspace crates
plantvillage_ssl = { path = "../..", features = ["cuda"] }

burn = { version = "0.20.0-pre" }
burn-cuda = { version = "0.20.0-pre" }

# Image processing for inference
image = "0.25"

# Async runtime
futures = "0.3"

# HTTP client for Jetson remote API
reqwest = { version = "0.11", features = ["json", "stream"] }
futures-util = "0.3"

# Random number generation (for training)
rand = "0.8"
rand_chacha = "0.3"

# File system traversal
walkdir = "2.5"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
